--- a/users-manager-api/serverless.yml
+++ b/users-manager-api/serverless.yml
@@ -1,4 +1,6 @@
 service: users-manager-api
+	
+frameworkVersion: "3.10.2"
 
 plugins:
   - serverless-domain-manager
@@ -9,7 +11,6 @@ plugins:
 
 provider:
   name: aws
-  stackTags: ${file(../serverless-settings/tags.yml):StackTags}
   runtime: python3.9
   region: eu-west-3
   apiKeys:
@@ -30,7 +31,6 @@ package:
     - "**"
  
 custom:
-  serviceTier: "freeTier"
   apiKeyOnlyAccess:
     development: true
     production: true
@@ -49,36 +49,36 @@ custom:
 
 
 functions:
-  create-user:
+  createUser:
     name: ${self:service}-${opt:stage}-create-user
     description: Responsible for creating new users
-    handler: create_user.handler
     runtime: python3.9
     timeout: 10
     package:
-      - requirements.txt
-      - ../common/exceptions/invalid_parameter.py
-      - ../common/exceptions/invalid_configuration.py
-      - ../common/utilities/__init__.py
-      - ../common/transformers/dictionary_parser.py
+      - ../common/exceptions/__init__.py
       - ../common/api/__init__.py
+      - users_table.py
       - create_user.py
+    handler: create_user.handler
     iamRoleStatementsInherit: true
     iamRoleStatements:
       - Effect: Allow
         Action:
+          # - dynamodb:Query
+          # - dynamodb:Scan
+          # - dynamodb:GetItem
           - dynamodb:PutItem
         Resource:
-          Ref: UsersTable
+          Ref: usersTable
     environments:
-      USERS_TABLE:
-        Ref: UsersTable
+      USERS_TABLE_NAME:
+        Ref: usersTable
     events:
       - http:
           path: /
           method: post
           cors:
-            origin: '*'
+            origin: "*"
             headers:
               - Content-Type
               - X-Amz-Date
@@ -90,24 +90,23 @@ functions:
 
 resource:
   Resources:
-    UsersTable:
+    usersTable:
       Type: AWS::DynamoDB::Table
       Properties:
         TableName: "Users"
         BillingMode: PAY_PER_REQUEST
         AttributeDefinitions:
-          - AttributeName: id
+          - AttributeName: Id
             AttributeType: S
           KeySchema:
             - AttributeName:
               KeyType: HASH
           TimeToLiveSpecification:
-            AttributeName: expirationDate
+            AttributeName: ExpiresOn
             Enabled: true
   Outputs:
     CreateUserLambdaArn:
       Description: "${self:service} lambda Arn"
-      Value:
-        "Fn:GetAtt": ["", "Arn"]
+      Value: !GetAtt createUser.Arn
       Export:
         Name: "${self:service}:${opt:stage}:CreateUserLambdaArn"
