--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,7 @@ jobs:
         run: npm install -g serverless@3.10.2
 
       - name: Setup Serverless
+        working-directory: ${{ github.event.inputs.apiToDeploy }}
         run: |
           sls config credentials --provider aws --key ${{ secrets.AWS_ACCESS_KEY_ID }} --secret ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           serverless plugin install --name serverless-domain-manager
