--- a/users-manager-api/serverless.yml
+++ b/users-manager-api/serverless.yml
@@ -13,6 +13,7 @@ provider:
   name: aws
   runtime: python3.9
   region: eu-west-3
+  #stage: ${opt:stage, "development"}
   apiName: ${self:service}
   apiGateway:
     apiKeys:
@@ -62,7 +63,7 @@ functions:
         - users_table.py
         - create_user.py
     handler: create_user.handler
-    iamRoleStatementsInherit: true
+    #iamRoleStatementsInherit: true
     iamRoleStatements:
       - Effect: Allow
         Action:
@@ -71,7 +72,9 @@ functions:
           # - dynamodb:GetItem
           - dynamodb:PutItem
         Resource:
-          Ref: usersTable
+          Fn::GetAtt:
+            - usersTable
+            - Arn
     environment:
       USERS_TABLE_NAME:
         Ref: usersTable
@@ -107,8 +110,10 @@ resources:
           AttributeName: ExpiresOn
           Enabled: true
   # Outputs:
-  #   CreateUserLambdaArn:
-  #     Description: "${self:service} lambda Arn"
-  #     Value: !GetAtt createUser.Arn
-  #     Export:
-  #       Name: "${self:service}:${opt:stage}:CreateUserLambdaArn"
+    # CreateUserLambdaArn:
+    #   Description: "${self:service} lambda Arn"
+    #   Value:
+    #     Fn::GetAtt: ServiceLambdaFunction.Arn
+    #   Export:
+    #     Name: MyServiceARN
+
