--- a/users-manager-api/serverless.yml
+++ b/users-manager-api/serverless.yml
@@ -45,7 +45,7 @@ custom:
     stage: ${opt:stage}
     createRoute53Record: true
     endpointType: "regional"
-    # autoDomain: true
+    autoDomain: true
   prune:
     automatic: true
     number: 2
