--- a/users-manager-api/serverless.yml
+++ b/users-manager-api/serverless.yml
@@ -3,8 +3,9 @@ service: users-manager-api
 frameworkVersion: "3.10.2"
 
 plugins:
+  - serverless-certificate-creator
   - serverless-domain-manager
-  # - serverless-python-requirements
+  - serverless-python-requirements
   - serverless-iam-roles-per-function
   # - serverless-resource-policy
   - serverless-prune-plugin
@@ -29,6 +30,8 @@ provider:
 
 package:
   individually: true
+  exclude:
+    - "**"
  
 custom:
   apiKeyOnlyAccess:
