--- a/users-manager-api/serverless.yml
+++ b/users-manager-api/serverless.yml
@@ -5,17 +5,15 @@ frameworkVersion: "3.10.2"
 plugins:
   - serverless-domain-manager # Defines Route53 Domain
   - serverless-deployment-bucket # Defines name and configuration for the deployment bucket
-  - serverless-python-requirements
-  - serverless-iam-roles-per-function
-  # - serverless-resource-policy
+  - serverless-python-requirements # Installs Python requirements
+  - serverless-iam-roles-per-function # Allows IAM roles per function
   - serverless-prune-plugin # Deletes older versions
 
 provider:
   name: aws
   runtime: python3.9
   region: eu-west-3
-  #stage: ${opt:stage, "development"}
-  apiName: ${self:service}
+  apiNapme: ${self:service}
   apiGateway:
     apiKeys:
       - ${opt:stage}-${self:service}-key
@@ -25,7 +23,7 @@ provider:
   #     Action:
   #     Resource:
   deploymentBucket:
-    name: "${self:service}-bucket"
+    name: "${self:service}-${opt:stage}-bucket"
     serverSideEncryption: AES256
   tracing:
     apiGateway: true
@@ -70,8 +68,11 @@ functions:
     timeout: 10
     package:
       include:
-        - ../common/exceptions/__init__.py
-        - ../common/api/__init__.py
+        - ../common/exceptions.py
+        - ../common/api.py
+        - ../common/enums.py
+        - ../common/transformers/**.py
+        - ../common/utilities.py
         - users_table.py
         - create_user.py
     handler: create_user.handler
