--- a/products-api/serverless.yml
+++ b/products-api/serverless.yml
@@ -13,8 +13,8 @@ plugins:
 provider:
   name: aws
   runtime: python3.9
-  stage: ${opt:stage, "development"}
-  region: ${opt:region, "eu-west-3"}
+  stage: ${env:ENVIRONMENT}
+  region: eu-west-3 #${opt:region, "eu-west-3"}
 
   # Bucket that will store the zipped API
   deploymentBucket:
@@ -23,7 +23,7 @@ provider:
   
   # APi Gateway configuration
   apiGateway:
-    shouldStartNameWithService: true
+    #shouldStartNameWithService: true
     apiKeys:
       - ${opt:stage}-${self:service}-key
     apiKeySourceType: HEADER
@@ -69,7 +69,7 @@ package:
 
 functions:
   createProduct:
-    name: ${opt:stage}-${self:service}-create-product
+    name: ${self:provider.stage}-${self:service}-create-product
     description: Responsible for creating new products
     runtime: python3.9
     timeout: 10
@@ -111,7 +111,7 @@ functions:
               - X-Api-Key
               - X-Amz-Security-Token
               - X-Amz-User-Agent
-          private: ${self:custom.apiKeyOnlyAccess.${opt:stage}}
+          private: ${self:custom.apiKeyOnlyAccess.${self:provider.stage}}
 
 resources:
   Resources:
