--- a/products-api/serverless.yml
+++ b/products-api/serverless.yml
@@ -25,7 +25,7 @@ provider:
   apiGateway:
     #shouldStartNameWithService: true
     apiKeys:
-      - ${opt:stage}-${self:service}-key
+      - ${env:ENVIRONMENT}-${self:service}-key
     apiKeySourceType: HEADER
 
   tracing:
