--- a/products-api/serverless.yml
+++ b/products-api/serverless.yml
@@ -81,7 +81,7 @@ functions:
         - ../common/aws/dynamo.py
         - ../common/factories/products_factory.py
         - ../common/models/product.py
-        - ../common/transformers/**.py
+        - ../common/transform.py
         - products_table.py
         - create_product.py
     handler: create_product.handler
