--- a/products-api/serverless.yml
+++ b/products-api/serverless.yml
@@ -77,6 +77,7 @@ functions:
         - ../common/exceptions.py
         - ../common/api.py
         - ../common/utilities.py
+        - ../common/decorators.py
         - ../common/enums.py
         - ../common/aws/dynamo.py
         - ../common/factories/products_factory.py
