Added API Gateway validation (#11)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
       apiToDeploy:
         description: "API to deploy (folder name)"   
         required: true
-        default: "products-api"
+        default: "products_api"
 
 jobs:
   deploy:
@@ -38,7 +38,7 @@ jobs:
       - name: Install Serverless and Plugins
         working-directory: ${{ github.event.inputs.apiToDeploy }}
         run: |
-          npm install -g serverless@3.11.0
+          npm install -g serverless@3.19.0
           serverless plugin install --name serverless-deployment-bucket
           serverless plugin install --name serverless-certificate-creator
           serverless plugin install --name serverless-domain-manager
