--- a/products_api/serverless.yml
+++ b/products_api/serverless.yml
@@ -93,6 +93,7 @@ functions:
           # - dynamodb:Scan
           # - dynamodb:GetItem
           - dynamodb:PutItem
+          - dynamodb:BatchWriteItem
         Resource:
           Fn::GetAtt:
             - ProductsTable
